@@ -2,26 +2,46 @@ package com.mercadolibre.socialmeli_g3.service;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.mercadolibre.socialmeli_g3.dto.FollowedListDTO;
-import com.mercadolibre.socialmeli_g3.dto.FollowersListDTO;
 import com.mercadolibre.socialmeli_g3.dto.UserDTO;
 import com.mercadolibre.socialmeli_g3.entity.User;
+import com.mercadolibre.socialmeli_g3.dto.FollowersListDTO;
 import com.mercadolibre.socialmeli_g3.exception.InvalidOperationException;
 import com.mercadolibre.socialmeli_g3.exception.NotFoundException;
 import com.mercadolibre.socialmeli_g3.repository.IUserRepository;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class UserServiceImpl implements IUserService{
 
+    ObjectMapper mapper = new ObjectMapper();
     private final IUserRepository userRepository;
-    ObjectMapper objectMapper = new ObjectMapper();
 
     public UserServiceImpl(IUserRepository userRepository) {
         this.userRepository = userRepository;
+    }
+
+
+    @Override
+    public FollowedListDTO getFollowedByUserId(int id) {
+        User user = userRepository.findUserById(id);
+        if (user == null) throw new NotFoundException("El usuario no existe");
+        FollowedListDTO followedListDTO = new FollowedListDTO();
+
+        List<UserDTO> followedUsersDTOS = user.getFollowed()
+                                                .stream().map(u -> new UserDTO(u.getUserId(), u.getUserName()))
+                                                .toList();
+//        @Test manual prueba de error
+//        List<UserDTO> followedUsersDTOS= new ArrayList<>();
+
+        if (followedUsersDTOS == null || followedUsersDTOS.isEmpty()) {
+            throw new NotFoundException("El usuario " + user.getUserName() + " no sigue a ningun vendedor");
+        }
+
+        followedListDTO.setUserId(user.getUserId());
+        followedListDTO.setUserName(user.getUserName());
+        followedListDTO.setFollowed(followedUsersDTOS);
+        return followedListDTO;
     }
 
     @Override
@@ -32,7 +52,7 @@ public class UserServiceImpl implements IUserService{
 
         List<UserDTO> followersList = userFollowers.getFollowers().stream()
                 .map(user -> new UserDTO(user.getUserId(), user.getUserName()))
-                .collect(Collectors.toList());
+                .toList();
 
         return new FollowersListDTO(userFollowers.getUserId(), userFollowers.getUserName(), followersList);
     }
